# wasd

./: .gitignore  CMakeLists.txt  README.md  main.c  wasd.config
src/: config_parser.c  config_parser.h  grid.c  grid.h  keyboard.c  keyboard.h  main.c  window_manager.c  window_manager.h
